--- a/libs/ui/src/lib/notificationDrawer/NotificationDrawer.module.less
+++ b/libs/ui/src/lib/notificationDrawer/NotificationDrawer.module.less
@@ -89,6 +89,7 @@
   padding-right: 24px;
   padding-bottom: 16px;
   padding-top: 6px !important;
+  cursor: pointer;
   .notify-align {
     display: flex;
     align-items: center;
