--- a/libs/ui/src/lib/header/search/Search.module.less
+++ b/libs/ui/src/lib/header/search/Search.module.less
@@ -8,6 +8,8 @@
   }
 }
 .search-input {
+  position: fixed;
+
   :global {
     .ant-popover-inner {
       border-radius: 6px;
@@ -41,6 +43,8 @@
 }
 .clients-list {
   padding: 20px 0;
+  max-height: 70vh;
+  overflow: hidden auto;
 }
 
 .ant-tabs-tab {
