--- a/apps/web/components/Appointments/AppointmentItem.module.less
+++ b/apps/web/components/Appointments/AppointmentItem.module.less
@@ -18,6 +18,7 @@
   min-width: 768px;
   box-sizing: border-box;
   border-radius: 4px;
+  background: #ffffff;
   .content {
     align-items: center;
     height: 92px;
