--- a/apps/web/components/Appointments/Appointments.module.less
+++ b/apps/web/components/Appointments/Appointments.module.less
@@ -1,6 +1,11 @@
 .appointmentContainer {
   box-shadow: 2px 2px 17px #0914290d;
-  border: 1px solid #f4f5f7;
   border-radius: 4px;
   box-sizing: border-box;
+}
+
+@media screen and (max-width: 1024px) {
+  .appointmentContainer {
+    box-shadow: none;
+  }
 }
