--- a/libs/ui/src/lib/gallery-view/GalleryView.module.less
+++ b/libs/ui/src/lib/gallery-view/GalleryView.module.less
@@ -146,7 +146,7 @@
         }
       }
       span:last-child {
-        margin-left: 5px;
+        margin-left: 8px;
       }
       .create-content {
         .content-item {
@@ -382,6 +382,52 @@
 .boxItem {
   display: flex;
 }
+
+.dotBtnAlbumDropdown {
+  height: 260px;
+  min-width: 250px;
+  overflow: auto;
+
+  > span {
+    font-size: 12px;
+    cursor: pointer;
+    padding-bottom: 6px;
+    display: flex;
+    justify-content: flex-end;
+    svg {
+      fill: gray;
+    }
+  }
+  > ul {
+    border: 0px;
+
+    > li {
+      min-height: 35px;
+      display: flex;
+      align-items: center;
+      padding: 0px 8px !important;
+
+      > div {
+        padding-left: 12px;
+      }
+
+      > span {
+        margin: 0px;
+      }
+
+      &:hover {
+        background-color: #88d2ec29 !important;
+
+        svg path {
+          fill: var(--primary-color);
+        }
+        div {
+          color: var(--primary-color);
+        }
+      }
+    }
+  }
+}
 .galleryAlbumImage {
   display: flex;
   flex-wrap: wrap;
@@ -445,10 +491,7 @@
       svg {
         fill: #000000a6;
       }
-      .imageDotButton {
-        color: red;
-        background-color: red;
-      }
+
       .dotBtn {
         padding: 3px 11px 0 11px;
         background-color: white;
@@ -1125,6 +1168,7 @@
             }
           }
         }
+
         .ant-table-tbody {
           tr {
             cursor: pointer;
@@ -1145,6 +1189,13 @@
             }
           }
         }
+      }
+    }
+
+    .ant-table-wrapper:last-child {
+      .ant-table-content {
+        min-height: 400px;
+        padding-bottom: 96px;
       }
     }
   }
