--- a/libs/ui/src/lib/journey-calendar/JourneyCalendar.module.less
+++ b/libs/ui/src/lib/journey-calendar/JourneyCalendar.module.less
@@ -27,6 +27,7 @@
     }
   }
   .journyCalenderDate {
+    user-select: none;
     padding: 0 3px;
     text-align: center;
     @media only screen and (max-width: 991px) {
