--- a/libs/ui/src/lib/kanban-card/KanbanCard.module.less
+++ b/libs/ui/src/lib/kanban-card/KanbanCard.module.less
@@ -13,8 +13,10 @@
   .lead-title-content {
     min-height: 26px;
     width: 100%;
-    font-weight: 500;
-    font-size: 15.5px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    font-family: 'Circular-Std-Book';
     color: #3d3d46;
     cursor: pointer;
     text-overflow: ellipsis;
@@ -43,16 +45,25 @@
         }
         button {
           padding: 0 4px 0;
-          margin-right: 8px;
+          margin: 0 4px 4px 0;
           font-size: 12px;
+          font-weight: 400px;
+          font-family: 'Circular-Std-Book';
+          line-height: 16px;
         }
       }
 
       .label {
         padding: 0 4px 0;
-        font-size: 11.2px;
+        margin: 0 4px 4px 0;
+        font-size: 12px;
+        line-height: 16px;
+        min-height: 22px;
         margin-bottom: 4px;
-        font-weight: 500;
+        font-weight: 400;
+        display: flex;
+        align-items: center;
+        font-family: 'Circular-Std-Book';
       }
     }
 
@@ -60,8 +71,14 @@
       display: flex;
       justify-content: flex-end;
 
-      .status-arrow {
-        font-size: 20px;
+      .activity-wrapper {
+        span {
+          cursor: pointer;
+          font-size: 18px;
+          &:hover {
+            font-size: 22px;
+          }
+        }
       }
     }
   }
@@ -97,8 +114,10 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: 15.5px;
-        color: #737387;
+        font-size: 12px;
+        line-height: 14px;
+        color: #9292a3;
+        font-family: 'Circular-Std-Book';
         .name-section {
           white-space: nowrap;
           overflow: hidden;
