--- a/libs/ui/src/lib/gallery-view/GalleryView.module.less
+++ b/libs/ui/src/lib/gallery-view/GalleryView.module.less
@@ -1204,6 +1204,10 @@
   img {
     margin-top: 12px;
   }
+  > div:last-child {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .column-loader {
