--- a/apps/web/pages/clients/clients.module.less
+++ b/apps/web/pages/clients/clients.module.less
@@ -4,7 +4,7 @@
   display: flex;
   width: 100%;
   justify-content: space-between;
-  padding: 20px 25px;
+  padding: 0 0 0 24px;
   align-items: center;
   border-radius: 4px;
 
@@ -177,6 +177,46 @@
         &:hover {
           svg {
             fill: #54b2d3;
+          }
+        }
+      }
+    }
+  }
+  .client-main-wrapper {
+    .client-mob-skeleton-wrap {
+      padding: 16px 12px;
+      border: 1px solid #ecedf0;
+      box-sizing: border-box;
+      border-radius: 4px;
+      position: relative;
+      display: flex;
+      margin-bottom: 8px;
+      &:last-child {
+        margin-bottom: 0;
+      }
+      .client-avatar {
+        margin-right: 10px;
+      }
+      .client-content-wrapper {
+        display: flex;
+        flex-direction: column;
+        .name {
+          margin-bottom: 10px;
+          :global {
+            .ant-skeleton-input {
+              width: 200px;
+              height: 20px;
+              border-radius: 4px;
+            }
+          }
+        }
+        .email {
+          :global {
+            .ant-skeleton-input {
+              width: 140px;
+              height: 15px;
+              border-radius: 4px;
+            }
           }
         }
       }
