--- a/apps/web/components/Leads/LeadsStages/LeadsStages.module.less
+++ b/apps/web/components/Leads/LeadsStages/LeadsStages.module.less
@@ -77,7 +77,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      height: 100%;
+      height: calc(100% - 180px);
       padding-top: 0 !important;
 
       .card-wrapper {
