--- a/libs/ui/src/styles/antd.less
+++ b/libs/ui/src/styles/antd.less
@@ -1,5 +1,31 @@
 @import '~antd/dist/antd.less';
-
+@primary-color: #54b2d3; // primary color for all components
+@link-color: #1890ff; // link color
+@primary-info-color: #e2f6f5;
+@success-color: #52c41a; // success state color
+@warning-color: #faad14; // warning state color
+@error-color: #f5222d; // error state color
+@red-color-text: #ff5b64;
+@blue-color-text: #6383f1;
+@font-size-base: 14px; // major text font size
+@heading-color: rgba(0, 0, 0, 0.85); // heading text color
+@text-color: rgba(0, 0, 0, 0.65); // major text color
+@text-color-secondary: rgba(0, 0, 0, 0.45); // secondary text color
+@disabled-color: rgba(0, 0, 0, 0.25); // disable state color
+@light-color: #ffffff;
+@red-focused-color: #df562b;
+@green-primary-color: #65cd98;
+@blue-focused-color: #eef7fb;
+@border-color-base: #ecedf0; // major border color
+@gray-background-color: #ecedf070;
+@gray-background-light-color: #fcfcfc;
+@box-shadow-base: 0 3px 6px -4px rgba(0, 0, 0, 0.12),
+  0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 9px 28px 8px rgba(0, 0, 0, 0.05); // major shadow for layers
+@font-variant-base: normal;
+@font-feature-settings-base: normal;
+@font-family: Circular-Std-Book, -apple-system, sans-serif;
+// @font-family-roboto: Roboto-Regular, -apple-system, sans-serif;
+// @font-family-roboto-medium: Roboto-Medium, -apple-system, sans-serif;
 :root {
   --primary-color: @primary-color;
   --light-primary-color: #e7f5f8;
